# cross_platform_framework

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  cleanup.bat  cleanup_build_dir.bat  make_android.bat  make_cross_platform.sh  make_windows.bat  setup_env.bat  setup_env.sh
.githooks/: commit-msg
3rdparty_reference/: readme.txt
cmake/: compiler_warnings.cmake  env_detect.cmake  ide.cmake  macros.cmake  platform_detector.cmake  test-neon.txt  utility.cmake
cmake/toolchains/: linaro7.5.0.toolchain.cmake  r328.toolchain.cmake  rk3308.toolchain.cmake
doc/: readme.md
src/: CMakeLists.txt  exports.def  exports.exp  modules.c  version.h
src/api/: CMakeLists.txt  my_api.c  my_api.cpp  my_api.h
src/common/: CMakeLists.txt  cjson_wrapper.h  common.c  common.h  common_test.c  global_func_impl.c  global_func_impl.h  handle_checker.h  my_cjson.c  my_cjson.h  my_common.c  my_common.h  my_logger.h  my_sched.c  my_sched.h
src/example/: CMakeLists.txt  demo.c  example.c
src/example/include/: dynamic_lib_loader.h
src/example/include/log/: logger.h
src/example/src/log/: slog.c
src/jni/: CMakeLists.txt  jni_entrance.c  jni_my_api.c  jni_my_api.h
tool/: readme.md
tool/script/: generate_your_cjson.py
